--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,12 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "AppBundle\\": "src/AppBundle"
+
+            "AppBundle\\": "src/AppBundle",
+            "Birds\\": "src/Birds",
+            "DevTools\\":"src/DevTools",
+            "":"src"
+
         },
         "classmap": [
             "app/AppKernel.php",
