Ajout du layout général en prototype. Plus définition des blocs à utiliser dans documentation/1. Twig blocs

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,14 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    admin:
+                        password: adminPass
+                        roles:  'ROLE_ADMIN'
 
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -22,3 +28,6 @@ security:
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
+    role_hierarchy:
+        ROLE_NATURALIST: [ROLE_USER]
+        ROLE_ADMIN:      [ROLE_NATURALIST, ROLE_USER]
