Correction de la barre de navigation fonctionnellement. Ajout du FOSUserBundle et des chemins register, login, logout, profile par défaut.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,4 +8,6 @@ birds_observations:
 
 app:
     resource: '@AppBundle/Resources/config/routing.yml'
-    
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
