--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,6 +7,6 @@ parameters:
     database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
+    mailer_user: no-reply@birdsafari.com
     mailer_password: null
     secret: c47e0ac4566f6f80b260af2aacd645949ed64610
