Ajout d'éléments dans la barre de navigation. git status

--- a/src/Birds/ObservationsBundle/Resources/config/routing.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/routing.yml
@@ -1,11 +1,8 @@
-birds_observations_observations:
+birds_observations:
     path:     /observations
     defaults: { _controller: BirdsObservationsBundle:Observation:observations }
 
-birds_observations_observations:
+birds_observations_add:
     path:     /add
     defaults: { _controller: BirdsObservationsBundle:Observation:addObs }
 
-birds_observations_observations:
-    path:     /admin
-    defaults: { _controller: BirdsObservationsBundle:Observation:addObs }
