--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,7 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
 
     encoders:
         FOS\UserBundle\Model\UserInterface: bcrypt
@@ -22,6 +22,8 @@ security:
                 csrf_token_generator: security.csrf.token_manager
             logout:    true
             anonymous: true
+            remember_me:
+                secret: '%secret%'
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
