Toutes les routes sont prêtes. Layout du blog et des observations. Ajout d'événement d'écoute à l'enregistrement.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,7 @@
-dev_tools_map:
-    resource: "@DevToolsMapBundle/Resources/config/routing.yml"
-    prefix:   /Map
+dev_tools_blog:
+    resource: "@DevToolsBlogBundle/Resources/config/routing.yml"
+    prefix:   /Blog
+
 
 birds_observations:
     resource: "@BirdsObservationsBundle/Resources/config/routing.yml"
