--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,7 @@ fos_user:
     from_email:
         address:     "%mailer_user%"
         sender_name: "%mailer_user%"
+    registration:
+        form:
+            type: Birds\ObservationsBundle\Form\RegistrationFormType
+
