--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,9 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    app.form.registration:
+        class: Birds\ObservationsBundle\Form\RegistrationFormType
+
+    birdsObservation.redirect_after_registration_subscribe:
+        class: Birds\ObservationsBundle\EventListener\RedirectAfterRegistration
+        autowire: true
