Amélioration de l'aménagement des classes: image & user déplacés dans AppBundle. Layout observation.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,8 +34,8 @@ services:
     #     arguments:
     #         $someArgument: 'some_value'
     app.form.registration:
-        class: Birds\ObservationsBundle\Form\RegistrationFormType
+        class: AppBundle\Form\RegistrationFormType
 
     birdsObservation.redirect_after_registration_subscribe:
-        class: Birds\ObservationsBundle\EventListener\RedirectAfterRegistration
+        class: AppBundle\EventListener\RedirectAfterRegistration
         autowire: true
