--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,11 +74,11 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: Birds\ObservationsBundle\Entity\User
+    user_class: AppBundle\Entity\User
     from_email:
         address:     "%mailer_user%"
         sender_name: "%mailer_user%"
     registration:
         form:
-            type: Birds\ObservationsBundle\Form\RegistrationFormType
+            type: AppBundle\Form\RegistrationFormType
 
