Ajouter une observation: Autocomplétion v0.1 champs espece, dateAuto, géolocalisation, carte avec marqueur interactif, recentrer le marqueur à ma position.

--- a/src/Birds/ObservationsBundle/Resources/config/routing.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/routing.yml
@@ -27,3 +27,8 @@ birds_observations_update:
 birds_my_observations:
     path:     /observation/me
     defaults: { _controller: BirdsObservationsBundle:Observation:myObservations }
+
+
+API_birdname:
+    path:     /API/birds
+    defaults: {_controller: BirdsObservationsBundle:Observation:birdsJson }
