--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
-        "friendsofsymfony/user-bundle": "~2.0"
+        "friendsofsymfony/user-bundle": "~2.0",
+        "symfony/cache":"^3.3.9"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
