Affichage des 5dernières observations sur la carte. Rétablissement de la page d'enregistrement. Ajout du logo du site. Déplacement du champs connexion à droite du menu de navigation. Modifications légères du style pour les observations.

--- a/src/Birds/ObservationsBundle/Resources/config/routing.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
+
 birds_observations:
     path:     /
     defaults: { _controller: BirdsObservationsBundle:Observation:observations }
@@ -19,7 +20,7 @@ birds_observations_remove:
         id : \d+
 
 birds_observations_update:
-    path:     /observation/{id}/remove
+    path:     /observation/{id}/modify
     defaults: { _controller: BirdsObservationsBundle:Observation:updateObservation }
     requirements:
         id : \d+
