Map autoFocus. OrderBy. Download global observations into JSOn and xls

--- a/src/Birds/ObservationsBundle/Resources/config/routing.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/routing.yml
@@ -19,6 +19,13 @@ birds_observations:
         limit: \d+
         orderBy: \d+
 
+
+export_obs:
+    path:     /export
+    defaults:
+        _controller: BirdsObservationsBundle:Observation:export
+
+
 birds_treatsearch:
     path:   /searching
     defaults: {_controller: BirdsObservationsBundle:Observation:treatSearch }
