--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
         "friendsofsymfony/user-bundle": "~2.0",
-        "symfony/cache":"^3.3.9"
+        "symfony/cache":"^3.3.9",
+        "sonata-project/exporter": "~1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -48,7 +49,6 @@
         "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
