--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,7 +4,7 @@ parameters:
     database_port: null
     database_name: birdsafari
     database_user: root
-    database_password: y1tuotb40k
+    database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: no-reply@birdsafari.com
