Début service de validation des données d'observation, intégration barre de navigation & pied de page

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -39,3 +39,7 @@ services:
     birdsObservation.redirect_after_registration_subscribe:
         class: AppBundle\EventListener\RedirectAfterRegistration
         autowire: true
+
+    birdsObservations.validator:
+        class: Birds\ObservationsBundle\ValidateData\Validator
+
