Intégration graphique Observations. Nettoyage du contrôleur Observation, création de deux services, création d'une commande console pour créer un admin.

--- a/src/Birds/ObservationsBundle/Resources/config/services.yml
+++ b/src/Birds/ObservationsBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    birds_observations.example:
-#        class: Birds\ObservationsBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    birdsObservations.validator:
+        class: Birds\ObservationsBundle\ValidateData\Validator
+
+    birdsObservations.pager:
+        class: Birds\ObservationsBundle\Pager\Pager
