--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,18 +2,18 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: 127.0.0.1
+    database_host: ftp.cluster021.hosting.ovh.net
     database_port: ~
-    database_name: birdsafari
-    database_user: root
+    database_name: birdsafarifgrp666
+    database_user: birdsafarifgrp666
     database_password: ~
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
+    mailer_host: ftp.cluster021.hosting.ovh.net
     mailer_user: ~
     mailer_password: ~
 
     # A secret key that's used to generate certain security-related tokens
-    secret: ThisTokenIsNotSoSecretChangeIt
+    secret: kf56fekdamkdojovnzqopklfm4fq3f454ev34vz53434s3qd
