Image dont observation valide automatiquement en page d'accueil. Mail administration utilisateurs.

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -51,3 +51,8 @@ contact:
 mentions:
     path: /Mentions_Legales
     defaults: { _controller: AppBundle:App:mentions }
+
+
+mail:
+    path: /mailTo
+    defaults: { _controller: AppBundle:Mail:sendMail }
