--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,14 +65,16 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    auth_mode: '%mailer_auth_mode%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
-    encryption: '%mailer_encryption%'
-    spool: { type: memory }
-    logging:    true
+    transport:      '%mailer_transport%'
+    auth_mode:      '%mailer_auth_mode%'
+    host:           '%mailer_host%'
+    port:           '%mailer_port%'
+    username:       '%mailer_user%'
+    password:       '%mailer_password%'
+    encryption:     '%mailer_encryption%'
+    spool:          { type: memory }
+    logging:        true
+    
 
 
 fos_user:
