--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -6,7 +6,9 @@ imports:
 #        metadata_cache_driver: apc
 #        result_cache_driver: apc
 #        query_cache_driver: apc
-
+framework:
+    assets:
+        base_path: '/web'
 monolog:
     handlers:
         main:
