--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.0.10",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
@@ -40,7 +40,9 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
-        "coresphere/console-bundle": "~0.4"
+        "coresphere/console-bundle": "~0.4",
+        "vich/uploader-bundle": "^1.6",
+        "javiereguiluz/easyadmin-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
