--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,3 +84,9 @@ fos_user:
 
 fos_js_routing:
     routes_to_expose: ["API_birdname"]
+    
+services:
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
