Correction des bugs, newsletter link, non captcha, logo et liens avatar.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,10 @@ framework:
         save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
     fragments: ~
     http_method_override: true
-    assets: ~
+    assets:
+        packages:
+            avatar:
+                base_path: /uploads/avatar/
     php_errors:
         log: true
 
