--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,4 +41,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/Blog/new, role: ROLE_NATURALIST }
+        - { path: ^/admin, role: ROLE_ADMIN }
+        
 
